--- a/jtc_services.html
+++ b/jtc_services.html
@@ -1,21 +1,49 @@
 <!doctype html>
 <html>
+
 <head>
-<!--
+    <!--
     New Perspectives on HTML5 and CSS3, 7th Edition
     Tutorial 1
     Case Problem 1
     
     Jacobs Tree Care Services
-    Author: 
-    Date:   
+    Author: Gabriel Hernandez
+    Date: 8/21/18  
 
     Filename: jtc_services.html
-	-->
+    -->
+
+
+    <meta charset="utf-8" />
+    <title>Jedds Tree Care Services</title>
+    <link rel="stylesheet" href="jtc_base .css">
+    <link rel="stylesheet" href="jtc_layout.css">
 
 </head>
 
 <body>
+
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">home</a>
+                </li>
+                <li>
+                    <a href="jtc_services.html">services</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <aside>
+
+    </aside>
+
+    <article>
+
+    </article>
 
 </body>
 
