--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
     Filename: jtc_index.html
    -->
+
+   <!-- Here meta data was added to provide the web page with information about the document.
+    The title elements titles this specific page of the browser as "Jedds Tree Care"
+    The two links connects the two pages.-->
     <meta charset="utf-8" />
     <title>Jedds Tree Care</title>
     <link rel="stylesheet" href="jtc_base .css">
@@ -22,6 +26,11 @@
 
 <body>
 
+    <!-- In the header the elements nav, unordered list and list items are nested. 
+    The Nav creates text that is used to take the user to another part of the document or broswer.
+    The unordered element list items are nested to create a list with no specific order. On the browser
+    it seen in the top left corner of each web page linked. There are also anchor elements uses a hyperlink to take the user to go from page to another.
+     -->
     <header>
         <nav>
             <ul>
@@ -36,8 +45,11 @@
     </header>
 
     <aside>
+        <!-- The img tag is an empty element that provides a link to a file that provides an image that is viewable in the browser. 
+         -->
         <img src="jtc_comments.png" alt="Comments">
 
+        <!-- The next couple of blockquote elements provide a section that are quotes. It uses paragraph tag for the quote and the cite tags for the name of the person who wrote it. -->
         <blockquote>
             <p>I hired Jedds to remove an old Sugar maple from a narrow yard. They did the job with no damage to my garage and
                 cleaned it all up that same day. Great service.</p>
@@ -61,9 +73,11 @@
     </aside>
 
     <article>
+        <!-- This header has an img tag nested inside. -->
         <header>
             <img src="jtc_photo1.png" alt="Jedds Tree Care"/>
         </header>
+        <!-- The pargraph tags are for putting alot text in a paragraph form for the user to see. -->
         <p>Jedds Tree Care is a complete yard service including branch trimming, pruning, 
                 stump removal and emergency tree removal. We offer same day emergency service 24/7. 
                 Jedds operates out of East Lansing, MI, but also serves the surrounding counties 
@@ -74,6 +88,7 @@
             professional arborists on staff to deal with your special needs and we can 
             handle any job, large or small.</p>
 
+        <!-- The address elements are for the document to know that the information nested in sode th eaddress tags are for a contact information and adderssess for the user to see anclick to if needed. -->
         <address>
             <strong>Jedds Tree Care</strong> 
             <br/>
