--- a/jtc_services.html
+++ b/jtc_services.html
@@ -14,7 +14,9 @@
     Filename: jtc_services.html
     -->
 
-
+<!-- Here meta data was added to provide the web page with information about the document.
+    The title elements titles this specific page of the browser as "Jedds Tree Care"
+    The two links connects the two pages.-->
     <meta charset="utf-8" />
     <title>Jedds Tree Care Services</title>
     <link rel="stylesheet" href="jtc_base .css">
@@ -23,7 +25,11 @@
 </head>
 
 <body>
-
+    <!-- In the header the elements nav, unordered list and list items are nested. 
+    The Nav creates text that is used to take the user to another part of the document or broswer.
+    The unordered element list items are nested to create a list with no specific order. On the browser
+    it seen in the top left corner of each web page linked. There are also anchor elements uses a hyperlink to take the user to go from page to another.
+     -->
     <header>
         <nav>
             <ul>
@@ -37,10 +43,11 @@
         </nav>
     </header>
 
+    <!-- This is h1 tag is a sections element that say that specific text is of the highest importance. -->
     <h1>Jedds Tree Care Services</h1>
     <img src="jtc_photo2.png" alt="">
 
-
+<!-- The following h2 tags are sectioning elements that say that specific text is of the second highest importance. -->
     <h2>Tree Removal</h2>
 <p>We perform professional tree removal using proven methods and top equipment,
     guarding against damage to your lawn, home, or garden. We're experts in the
@@ -82,7 +89,8 @@
 <p>We are ready to help as you landscape your property by replanting old trees and planting new
     ones. We can work with your trees, shrubbery, and other greenery to enhance the natural 
     beauty of your property and help you achieve your landscaping vision.</p>
-    
+
+    <!-- The footer is where text is sent to the bottom of the page for the user to see extra information about the browser. -->
     <footer>Jedds Tree Care &#9830; 201 Edward Ave. &#9830; Lansing, Mi 48930</footer>
 </body>
 
